Started refactoring PluginFactory to use GraalVM compatible plugin scanning approach implemented by PluginScanner